# stonks

./: .dockerignore  CLAUDE.md  Dockerfile  database.py  pyproject.toml  pytest.ini  requirements.txt  retry_unknown_items.py  scrape.py  test_database.py  test_integration.py
.github/workflows/: build-and-push.yml
