[project]
name = "stonks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymongo==4.14.0",
    "requests==2.32.4",
    "websocket-client==1.8.0",
]

[tool.ruff]
indent-width = 2

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
